k8s-hello.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-hello
spec:
  # selector:
  #   app: k8s-hello-k8s-hello
  clusterIP: None
  ports:
  - name: http
    port: 8080
